visibility changes and functional bugs fixed

--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,6 @@ body {
     text-shadow: 0 0 4px black;
 }
 
-img {
-    filter: drop-shadow(0 0 4px #000000);
-}
-
 #thunderstorm {
     position: absolute;
     z-index: -2;
@@ -88,6 +84,7 @@ img {
     justify-content: space-between;
     width: 100%;
     gap: 2rem;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .main-weather-container {
@@ -164,6 +161,7 @@ img {
     padding: 4px;
     color: white;
     outline: none;
+    text-shadow: 0 0 4px black;
 }
 
 #search-button {
@@ -174,6 +172,7 @@ img {
     background-repeat: no-repeat;
     border: transparent;
     cursor: pointer;
+    filter: drop-shadow(0px 0px 4px #000000);
 }
 
 ::placeholder {
@@ -182,14 +181,13 @@ img {
 }
 
 .slide-container {
-    width: 90%;
+    width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 2rem;
     opacity: 1;
-    transition: opacity 0.5s ease-in-out;
     position: relative;
     z-index: 1;
     overflow: hidden;
@@ -199,8 +197,11 @@ img {
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: opacity 0.5s ease-in-out;
+    background-color: rgb(255, 255, 255, 0.3);
 }
 
 #slide-left, #slide-right {
@@ -250,7 +251,6 @@ img {
 
 .weather-icon-day-hour {
     width: 5rem;
-    filter: drop-shadow(0 0 4px #000000);
 }
 
 .degree-day-hour {
@@ -269,7 +269,7 @@ img {
     gap: 1rem;
     margin-bottom: 3rem;
     opacity: 0;
-    transition: opacity 1s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .nav-point {
